--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -36,7 +36,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [group:scanners]
-programs=virustotal,clamav,yara,malass
+programs=virustotal,clamav,yara,capa,malass
 
 [program:virustotal]
 command=/usr/local/bin/vtot_scan.py
@@ -80,6 +80,24 @@ command=/usr/local/bin/yara_scan.py
   --yara %(ENV_EXTRACTED_FILE_ENABLE_YARA)s
   --yara-custom-only %(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_YARA)s
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:capa]
+command=/usr/local/bin/capa_scan.py
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
+  --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
+  --capa %(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
+  --capa-rules "%(ENV_CAPA_RULES_DIR)s"
+  --capa-verbose %(ENV_EXTRACTED_FILE_CAPA_VERBOSE)s
+autostart=%(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
