--- a/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
@@ -1,3 +1,5 @@
+# Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
+
 set default=0
 set timeout=-1
 
@@ -20,27 +22,27 @@ insmod play
 play 960 440 1 0 4 440 1
 
 menuentry "Live system" {
-  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+  linux /live/vmlinuz boot=live components username=analyst nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
-menuentry "Install Malcolm Base (quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
+menuentry "Install Malcolm (quick install)" {
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (encrypted quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
+menuentry "Install Malcolm (encrypted quick install)" {
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar_crypto.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (advanced configuration)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
+menuentry "Install Malcolm (advanced configuration)" {
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_minimal.cfg auto=true priority=high vga=normal
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (virtual machine single partition quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+menuentry "Install Malcolm (virtual machine single partition quick install)" {
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_vmware.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
