--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -49,6 +49,8 @@ x-zeek-variables: &zeek-variables
   VTOT_REQUESTS_PER_MINUTE : 4
   EXTRACTED_FILE_ENABLE_YARA : 'false'
   EXTRACTED_FILE_YARA_CUSTOM_ONLY : 'false'
+  EXTRACTED_FILE_ENABLE_CAPA : 'false'
+  EXTRACTED_FILE_CAPA_VERBOSE : 'false'
   EXTRACTED_FILE_ENABLE_CLAMAV : 'false'
   EXTRACTED_FILE_ENABLE_FRESHCLAM : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
@@ -124,7 +126,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: malcolmnetsec/elasticsearch-oss:2.3.0
+    image: malcolmnetsec/elasticsearch-oss:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -159,7 +161,7 @@ services:
       retries: 3
       start_period: 180s
   kibana:
-    image: malcolmnetsec/kibana-oss:2.3.0
+    image: malcolmnetsec/kibana-oss:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -185,7 +187,7 @@ services:
       retries: 3
       start_period: 210s
   elastalert:
-    image: malcolmnetsec/elastalert:2.3.0
+    image: malcolmnetsec/elastalert:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -213,7 +215,7 @@ services:
       retries: 3
       start_period: 210s
   curator:
-    image: malcolmnetsec/curator:2.3.0
+    image: malcolmnetsec/curator:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -232,7 +234,7 @@ services:
       retries: 3
       start_period: 30s
   logstash:
-    image: malcolmnetsec/logstash-oss:2.3.0
+    image: malcolmnetsec/logstash-oss:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -265,7 +267,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:2.3.0
+    image: malcolmnetsec/filebeat-oss:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -302,7 +304,7 @@ services:
       retries: 3
       start_period: 60s
   moloch:
-    image: malcolmnetsec/moloch:2.3.0
+    image: malcolmnetsec/moloch:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -313,7 +315,7 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *moloch-variables
-      MOLOCH_VERSION : '2.4.0'
+      MOLOCH_VERSION : '2.4.1'
       VIRTUAL_HOST : 'moloch.malcolm.local'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -341,7 +343,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:2.3.0
+    image: malcolmnetsec/zeek:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -367,7 +369,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:2.3.0
+    image: malcolmnetsec/file-monitor:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -388,7 +390,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:2.3.0
+    image: malcolmnetsec/pcap-capture:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -414,7 +416,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:2.3.0
+    image: malcolmnetsec/pcap-monitor:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -437,7 +439,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:2.3.0
+    image: malcolmnetsec/file-upload:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -463,7 +465,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:2.3.0
+    image: malcolmnetsec/htadmin:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -485,7 +487,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:2.3.0
+    image: malcolmnetsec/freq:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -503,7 +505,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:2.3.0
+    image: malcolmnetsec/name-map-ui:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -524,7 +526,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:2.3.0
+    image: malcolmnetsec/nginx-proxy:2.4.0
     restart: "no"
     stdin_open: false
     tty: true
