--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -55,12 +55,15 @@ export MALASS_HOST=""
 export MALASS_PORT=80
 export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
 export YARA_RULES_DIR=/opt/yara-rules
+export CAPA_VERBOSE=false
+export CAPA_RULES_DIR=/opt/capa-rules
 
 export ZEEK_FILE_WATCH=false
 export ZEEK_FILE_SCAN_CLAMAV=false
 export ZEEK_FILE_SCAN_VTOT=false
 export ZEEK_FILE_SCAN_MALASS=false
 export ZEEK_FILE_SCAN_YARA=false
+export ZEEK_FILE_SCAN_CAPA=false
 
 export AUTOSTART_AUDITBEAT=false
 export AUTOSTART_CLAMAV_UPDATES=false
