added CVE-2021-41773 package (apache path traversal)

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -345,6 +345,9 @@ filter {
       }
     }
 
+    mutate { id => "mutate_add_tag_ics_best_guess"
+             add_tag => [ "ics_best_guess" ] }
+
   } else if ([log_source] == "bsap_ip_header") {
     #############################################################################################################################
     # bsap_ip_header.log
