for idaholab/Malcolm#64, tweaks to vulnerability mapping

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5023,15 +5023,8 @@ filter {
       # ECS - zeek.notice.category -> vulnerability.* (https://www.elastic.co/guide/en/ecs/current/ecs-vulnerability.html)
       mutate { id => "mutate_merge_ecs_vulnerability_category_notice_category"
                merge => { "[vulnerability][category]" => "[zeek][notice][category]" } }
-      ruby {
-        id => "ruby_zeek_notice_ecs_description"
-        code => "
-          texts = Array.new
-          texts << [event.get('[zeek][notice][note]'),
-                    event.get('[zeek][notice][msg]'),
-                    event.get('[zeek][notice][sub]')].compact.join('. ')
-          event.set('[vulnerability][description]', texts)"
-      }
+      mutate { id => "mutate_merge_ecs_vulnerability_description_notice_subcategory"
+               merge => { "[vulnerability][description]" => "[zeek][notice][sub_category]" } }
       if ([rule][reference]) { mutate { id => "mutate_merge_zeek_noticed_mapped_vulnerability_reference"
                                         merge => { "[vulnerability][reference]" => "[rule][reference]" } } }
       if ([rule][author]) {    mutate { id => "mutate_merge_zeek_noticed_mapped_vulnerability_vendor"
