--- a/logstash/config/log4j2.properties
+++ b/logstash/config/log4j2.properties
@@ -18,3 +18,5 @@ rootLogger.appenderRef.console.ref = ${sys:ls.log.format}_console
 # Dissector is crazy
 logger.ShutUpDissector.name = org.logstash.dissect.Dissector
 logger.ShutUpDissector.level = error
+
+formatMsgNoLookups = true
