--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:5.0.0
+    image: malcolmnetsec/opensearch:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -139,8 +139,8 @@ services:
       << : *process-variables
       logger.level : 'INFO'
       bootstrap.memory_lock : 'true'
-      OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
-      VIRTUAL_HOST : 'es.malcolm.local'
+      OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
+      VIRTUAL_HOST : 'os.malcolm.local'
       discovery.type : 'single-node'
       discovery.zen.minimum_master_nodes : 1
       cluster.routing.allocation.disk.threshold_enabled : 'false'
@@ -170,7 +170,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:5.0.0
+    image: malcolmnetsec/dashboards-helper:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -201,7 +201,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:5.0.0
+    image: malcolmnetsec/dashboards:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -225,7 +225,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:5.0.0
+    image: malcolmnetsec/logstash-oss:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -236,7 +236,7 @@ services:
       << : *common-beats-variables
       << : *common-lookup-variables
       OS_HOSTS : 'opensearch:9200'
-      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom'
+      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
     depends_on:
       - opensearch
     expose:
@@ -265,7 +265,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:5.0.0
+    image: malcolmnetsec/filebeat-oss:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -306,7 +306,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:5.0.0
+    image: malcolmnetsec/arkime:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -317,7 +317,6 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *arkime-variables
-      ARKIME_VERSION : '3.1.1'
       VIRTUAL_HOST : 'arkime.malcolm.local'
       OS_HOST : 'opensearch'
       OS_PORT : 9200
@@ -351,7 +350,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:5.0.0
+    image: malcolmnetsec/zeek:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -381,7 +380,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:5.0.0
+    image: malcolmnetsec/file-monitor:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -407,7 +406,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:5.0.0
+    image: malcolmnetsec/pcap-capture:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -430,7 +429,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:5.0.0
+    image: malcolmnetsec/pcap-monitor:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -456,7 +455,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:5.0.0
+    image: malcolmnetsec/file-upload:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -482,7 +481,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.0.0
+    image: malcolmnetsec/htadmin:5.0.1
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -507,7 +506,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.0.0
+    image: malcolmnetsec/freq:5.0.1
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -528,7 +527,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.0.0
+    image: malcolmnetsec/name-map-ui:5.0.1
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -555,7 +554,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:5.0.0
+    image: malcolmnetsec/nginx-proxy:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
