--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -127,7 +127,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:5.0.0
+    image: malcolmnetsec/opensearch:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -136,8 +136,8 @@ services:
       << : *process-variables
       logger.level : 'WARN'
       bootstrap.memory_lock : 'true'
-      OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
-      VIRTUAL_HOST : 'es.malcolm.local'
+      OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
+      VIRTUAL_HOST : 'os.malcolm.local'
       discovery.type : 'single-node'
       discovery.zen.minimum_master_nodes : 1
       cluster.routing.allocation.disk.threshold_enabled : 'false'
@@ -164,7 +164,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:5.0.0
+    image: malcolmnetsec/dashboards-helper:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -192,7 +192,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:5.0.0
+    image: malcolmnetsec/dashboards:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -213,7 +213,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:5.0.0
+    image: malcolmnetsec/logstash-oss:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -224,7 +224,7 @@ services:
       << : *common-beats-variables
       << : *common-lookup-variables
       OS_HOSTS : 'opensearch:9200'
-      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom'
+      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
     depends_on:
       - opensearch
     expose:
@@ -248,7 +248,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:5.0.0
+    image: malcolmnetsec/filebeat-oss:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -285,7 +285,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:5.0.0
+    image: malcolmnetsec/arkime:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -296,7 +296,6 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *arkime-variables
-      ARKIME_VERSION : '3.1.1'
       VIRTUAL_HOST : 'arkime.malcolm.local'
       OS_HOST : 'opensearch'
       OS_PORT : 9200
@@ -324,7 +323,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:5.0.0
+    image: malcolmnetsec/zeek:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -350,7 +349,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:5.0.0
+    image: malcolmnetsec/file-monitor:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -373,7 +372,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:5.0.0
+    image: malcolmnetsec/pcap-capture:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -393,7 +392,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:5.0.0
+    image: malcolmnetsec/pcap-monitor:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -416,7 +415,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:5.0.0
+    image: malcolmnetsec/file-upload:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -442,7 +441,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.0.0
+    image: malcolmnetsec/htadmin:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -464,7 +463,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.0.0
+    image: malcolmnetsec/freq:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -482,7 +481,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.0.0
+    image: malcolmnetsec/name-map-ui:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -503,7 +502,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:5.0.0
+    image: malcolmnetsec/nginx-proxy:5.0.1
     restart: "no"
     stdin_open: false
     tty: true
