--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1733,7 +1733,7 @@ filter {
   } else if ([log_source] == "ipsec") {
     #############################################################################################################################
     # ipsec.log
-    # https://github.com/zeek/spicy-analyzers/blob/main/analyzer/protocol/ipsec/main.zeek
+    # https://github.com/corelight/zeek-spicy-ipsec/blob/master/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_ipsec"
@@ -2008,7 +2008,7 @@ filter {
   } else if ([log_source] == "ldap") {
     #############################################################################################################################
     # ldap.log
-    # https://github.com/mmguero-dev/spicy-analyzers/blob/main/analyzer/protocol/ldap/ldap.zeek
+    # https://github.com/zeek/spicy-ldap/blob/main/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_ldap"
@@ -2038,7 +2038,7 @@ filter {
   } else if ([log_source] == "ldap_search") {
     #############################################################################################################################
     # ldap_search.log
-    # https://github.com/mmguero-dev/spicy-analyzers/blob/main/analyzer/protocol/ldap/ldap.zeek
+    # https://github.com/zeek/spicy-ldap/blob/main/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_ldap_search"
@@ -3208,7 +3208,7 @@ filter {
   } else if ([log_source] == "wireguard") {
     #############################################################################################################################
     # wireguard.log
-    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/protocol/wireguard
+    # https://github.com/corelight/zeek-spicy-wireguard/blob/master/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_wireguard"
@@ -3423,7 +3423,7 @@ filter {
   } else if ([log_source] == "stun") {
     #############################################################################################################################
     # stun.log
-    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/stun
+    # https://github.com/corelight/zeek-spicy-stun/blob/master/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_stun"
@@ -3455,7 +3455,7 @@ filter {
   } else if ([log_source] == "stun_nat") {
     #############################################################################################################################
     # stun.log
-    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/stun
+    # https://github.com/corelight/zeek-spicy-stun/blob/master/analyzer/main.zeek
 
     dissect {
       id => "dissect_zeek_stun_nat"
@@ -4485,10 +4485,18 @@ filter {
              split => { "[zeek][http][resp_filenames]" => "," } }
     mutate { id => "mutate_split_zeek_http_resp_mime_types"
              split => { "[zeek][http][resp_mime_types]" => "," } }
-    mutate { id => "mutate_split_zeek_http_tags"
-             split => { "[zeek][http][tags]" => "," } }
     mutate { id => "mutate_split_zeek_http_proxied"
              split => { "[zeek][http][proxied]" => "," } }
+
+    if ([zeek][http][tags]) {
+      # merge zeek.http.tags into tags and then remove original
+      mutate { id => "mutate_split_zeek_http_tags"
+               split => { "[zeek][http][tags]" => "," } }
+      mutate { id => "mutate_merge_zeek_http_tags"
+               merge => { "[tags]" => "[zeek][http][tags]" } }
+      mutate { id => "mutate_remove_field_zeek_http_tags"
+               remove_field => [ "[zeek][http][tags]" ] }
+    }
 
     if ([zeek][http][host]) {
       mutate { id => "mutate_merge_zeek_http_host"
