put CSRF_TRUSTED_ORIGINS in correct .env file

--- a/config/netbox.env.example
+++ b/config/netbox.env.example
@@ -1,4 +1,7 @@
 CORS_ORIGIN_ALLOW_ALL=True
+# If using the NetBox interface to create API tokens, set this
+#   (see https://docs.djangoproject.com/en/4.1/ref/settings/#csrf-trusted-origins)
+# CSRF_TRUSTED_ORIGINS=https://malcolm.example.org
 CSRF_TRUSTED_ORIGINS=http://* https://*
 BASE_PATH=netbox
 REMOTE_AUTH_ENABLED=True
